<?xml version="1.0"?>
<package format="2">
  <name>lazyros</name>
  <version>0.0.0</version>
  <description>The lazyros package</description>

  <maintainer email="jakob.hollenstein@gmail.com">viki</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
